[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/classes/colonyRooms/MarketRoom.gd" type="Script" id=1]

[node name="MarketRoom" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 128.0
margin_bottom = 64.0
color = Color( 0.670588, 0.627451, 0.745098, 1 )

[node name="SellTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SellTimer" to="." method="_on_SellTimer_timeout"]
